<resources>
    <string name="app_name">BWA Mov</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="skip_intro">Lewati Perkenalan</string>
    <string name="next">Lanjutkan</string>
    <string name="desc">desc</string>
    <string name="pre_sales">Pre Sales</string>
    <string name="pre_sales_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="start">Memulai</string>
    <string name="login">Masuk Akun</string>
    <string name="register_account">Daftar Akun Baru</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="save_next">Simpan dan Lanjutkan</string>
    <string name="upload_later">Upload Nanti</string>
    <string name="coming_soon">Coming Soon</string>
</resources>