<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".SignUpActivity"
    tools:ignore="UnusedAttribute, Autofill">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibBack" />

    <Button
        android:id="@+id/btnNextRegister"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/pink"
        android:paddingVertical="16dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextViewStyle"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <EditText
        android:id="@+id/etUserName"
        style="@style/EditTextStyle"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvUsername"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        style="@style/TextViewStyle"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/etUserName"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextViewStyle"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextStyle"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextViewStyle"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditTextStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>