<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".onboarding.OnboardingThreeActivity">

    <ImageView
        android:id="@+id/ivOB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding_three"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/tvPreSales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:text="@string/cashless"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivOB2"
        app:layout_constraintStart_toStartOf="@+id/ivOB2"
        app:layout_constraintTop_toBottomOf="@+id/ivOB2" />

    <TextView
        android:id="@+id/tvPreSalesDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cashless_desc"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivOB2"
        app:layout_constraintStart_toStartOf="@+id/ivOB2"
        app:layout_constraintTop_toBottomOf="@+id/tvPreSales" />

    <Button
        android:id="@+id/btnStart"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="0dp"
        android:paddingVertical="16dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/pink"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>