<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".SignInActivity"
    tools:ignore="TextFields">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mov" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_grey"
        android:paddingVertical="16dp"
        android:text="@string/register_account"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/pink"
        android:paddingVertical="16dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="71dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextViewStyle"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/tvSignIn"
        app:layout_constraintStart_toStartOf="@+id/tvSignIn"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />

    <EditText
        android:id="@+id/etUserName"
        style="@style/EditTextStyle"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tvUsername"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        style="@style/TextViewStyle"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/etUserName"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>