<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNameAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="Chairul Amri"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibWallet"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@+id/tvNameAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvNameAccount"
        app:srcCompat="@drawable/ic_wallet_24" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="IDR 280.000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibWallet"
        app:layout_constraintStart_toEndOf="@+id/ibWallet"
        app:layout_constraintTop_toTopOf="@+id/ibWallet" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNameAccount"
        app:srcCompat="@drawable/user_pic" />

    <TextView
        android:id="@+id/tvNowPlayingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@+id/tvNameAccount"
        app:layout_constraintTop_toBottomOf="@+id/ibWallet" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNowPlayingItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNowPlayingItem"
        app:layout_constraintStart_toStartOf="@+id/tvNowPlayingItem"
        app:layout_constraintTop_toBottomOf="@+id/tvNowPlayingItem" />

    <TextView
        android:id="@+id/tvComingSoonItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/coming_soon"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@+id/tvNameAccount"
        app:layout_constraintTop_toBottomOf="@+id/rvNowPlayingItem" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComingSoonItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvComingSoonItem"
        app:layout_constraintStart_toStartOf="@+id/tvComingSoonItem"
        app:layout_constraintTop_toBottomOf="@+id/tvComingSoonItem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_home_active" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_tiket" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_profile" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>